# contracts

./: .gitignore  Cargo.toml  DEPLOYED.md  LICENSE  README.md  deploy.sh
faucet/: Cargo.toml  README.md
faucet/src/: lib.rs  storage.rs  test.rs
faucet/test_snapshots/test/: test_claim_usdc_mint_mode.1.json  test_claim_usdc_only.1.json  test_claim_usdc_transfer_mode.1.json
liquidity-manager/: Cargo.toml
liquidity-manager/src/: lib.rs  storage.rs  test.rs
liquidity-manager/test_snapshots/test/: test_deposit_withdraw.1.json
oracle-manager/: Cargo.toml
oracle-manager/src/: lib.rs  price.rs  storage.rs  test.rs  validation.rs
oracle-manager/test_snapshots/test/: test_circuit_breaker.1.json  test_get_multiple_prices.1.json  test_initialize.1.json  test_initialize_twice.1.json  test_pause_unpause.1.json  test_price_staleness.1.json  test_register_and_update_price.1.json
risk-manager/: Cargo.toml
risk-manager/src/: lib.rs  storage.rs  test.rs
risk-manager/test_snapshots/test/: test_assess_position_risk.1.json
scripts/: initialize-faucet.sh
shared/: Cargo.toml
shared/src/: constants.rs  errors.rs  lib.rs  math.rs  types.rs  validation.rs
trading-core/: Cargo.toml
trading-core/src/: lib.rs  storage.rs  test.rs
trading-core/test_snapshots/test/: test_open_close_position.1.json  test_order_execution_limit_entry.1.json
vault/: Cargo.toml  README.md
vault/src/: lib.rs  storage.rs  test.rs
vault/test_snapshots/test/: test_deposit_and_withdraw.1.json  test_initialize.1.json  test_pause_unpause.1.json  test_reserve_and_release.1.json  (+1 more)
