[package]
name = "liquidity-manager"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
shared = { path = "../shared" }
